@@ -2,14 +2,14 @@
 Hash: SHA1
 
 DIST exo-0.3.92.tar.bz2 1398751 RMD160 6f4b02eb56b94968c383d915eab038226e2f91a9 SHA1 61a7090f175157bbc4817903c7cae52a20ec3a70 SHA256 585f6c433ad4e0bd7dcb2aa98456cca30562ddd864bac2bb4b4338a0939d7064
-EBUILD exo-0.3.92.ebuild 1010 RMD160 7932c027f00ce1e5a5bab603565e9c64ea1d237e SHA1 a26c3098df5f73942fea007423e8553d8f9072b0 SHA256 1b73f39e2747dc01a1457986890eebdd86bcb5404bfacf772ce897774c40a6b7
-EBUILD exo-9999.ebuild 989 RMD160 036772bec8e89ed7c222aa6dce391d371de5b453 SHA1 42814b52e5ae77a67b77e65d4f968ee003509e50 SHA256 6189b23314b49f7741888b0f32e9f70064243a253c0fe19ecb2e2a1ff9784749
-MISC ChangeLog 1239 RMD160 aea72629915c6111942c7b346650f35a5098e819 SHA1 d0253d14adbebe4207e666b6c9843e6e9d97e72a SHA256 4c9a8e8b7559f4c73766a0ff412f513b0d68761a3a5071910f11b73ba238e3cd
+EBUILD exo-0.3.92.ebuild 1051 RMD160 ecbb08f3ab73fe6cb56e767e5dd124939b9f1e25 SHA1 51a499dc53d6828115af2c6f57b3169b64040d75 SHA256 1b290f749901df8be5182843117a139539136a200aa20925eebe4ce8fb958e32
+EBUILD exo-9999.ebuild 1047 RMD160 9306d8ec4f822bb84af7eb1be951599ae7b84846 SHA1 49a5ea46bee3571319fbb1e6a127f830a2d7cce8 SHA256 d724aa6524735d2a90f672fa3f8c4700abe21460aecae242f5a58ac47954e587
+MISC ChangeLog 1346 RMD160 6c46cfa130c910e59eb4cae26deaf3bf25c2d20a SHA1 c233e9ab67e26084bf8b97608a2fe7a3bbdc8258 SHA256 281783e2d3ae5d364cb5ffb1e30b482ce9e04dc8c123de86cd384fe01f0fd271
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkkhtgQACgkQKhnDs22gwa9J4ACcDBEqFSe+L6ICa0fgp/FeSpAh
-0T0AnR5eh6g9/J0/dyg4eXwarrBFXLU3
-=m6Ym
+iEYEARECAAYFAklG2wIACgkQKhnDs22gwa9swQCfTMfDr+YAfB03uDyn30Jm2f2E
+7ksAnifLKY2R80tAl6C0uk6L2bFwQGCI
+=3+tt
 -----END PGP SIGNATURE-----
